--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.timothyb89</groupId>
 	<artifactId>eventbus</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -28,7 +27,8 @@
 		<connection>scm:git:https://github.com/timothyb89/EventBus.git</connection>
 		<developerConnection>scm:git:git@github.com:timothyb89/EventBus.git</developerConnection>
 		<url>git@github.com:timothyb89/EventBus.git</url>
-	</scm>
+	  <tag>eventbus-1.0</tag>
+  </scm>
 	
 	<build>
 		<plugins>
