--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.timothyb89</groupId>
 	<artifactId>eventbus</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -27,7 +27,7 @@
 		<connection>scm:git:https://github.com/timothyb89/EventBus.git</connection>
 		<developerConnection>scm:git:git@github.com:timothyb89/EventBus.git</developerConnection>
 		<url>git@github.com:timothyb89/EventBus.git</url>
-	  <tag>HEAD</tag>
+	  <tag>eventbus-1.0</tag>
   </scm>
 	
 	<build>
